2003-07-12  Chris Dean  <Chris.Dean@sokitomi.com>

	* module3.scm: Added functions to test compile time bug of
    	primitive-array-*, Savannah bug #4289
	* obj-test.scm: Test the primitive-array-* functions.

2003-07-11  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  New test for 'fluid-let' with 'future'.

2003-07-10  Chris Dean  <Chris.Dean@sokitomi.com>

	* mac-test.scm:  New test for Keyword among syntax-rules literals.

2003-06-03  Per Bothner  <per@bothner.com>

	* mac-test.scm:  New cond-expand test, based on bug reported
	2003-06-02 by Sven.Hartrumpf@FernUni-Hagen.de.

2003-06-03  Per Bothner  <per@bothner.com>

	* misc-test.scm: New tests.

2003-06-01  Per Bothner  <per@bothner.com>

	* mac-test.scm:  New cond-expand test, based on bug reported
	2003-06-01 by Sven.Hartrumpf@FernUni-Hagen.de.

2003-05-31  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Add a parameter type specifier to avoid warning.

2003-05-22  Per Bothner  <per@bothner.com>

	* mac-test.scm:  New testcases based on bug reported
	2003-05-19 by Sven.Hartrumpf@FernUni-Hagen.de.

2003-05-22  Bruce R. Lewis <brlewis@ALUM.MIT.EDU>.

	* mac-test.scm:  Two new test cases.

2003-05-18  Per Bothner  <per@bothner.com>

	* misc-test.scm (fie-6):  New test, from Petter Oesterlund.

2003-05-13  Chris Dean <Chris.Dean@sokitomi.com>.

	* obj-test.scm:  New test for a name mangling problem.
	Detects bug fixed 05-16 (see gnu/kawa/reflect/ChangeLog).

2003-04-28  Per Bothner  <per@bothner.com>

	* obj-test.scm:  New test based on bug reported 02-20 by
	Vladimir Tsichevski <wowa@jet.msk.su>.

2003-04-27  Per Bothner  <per@bothner.com>

	* obj-test.scm:  New test based on bug reported 04-24 by
	Vladimir Tsichevski <wowa@jet.msk.su>.

2003-04-21  Vladimir Tsichevski <wowa@jet.msk.su>

	* mac-test.scm:  New test.

2003-04-21  Chris Dean  <Chris.Dean@sokitomi.com>

	* module1.scm, module2.scm:  New test.

2003-04-19  Chris Dean  <Chris.Dean@sokitomi.com>
